add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>farah's Amazing Website</title>
-    </head>
+  <head>
+    <title>farah</title>
+  </head>
+  <title>Witty title you added in step 2</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+  <body>
+    <!-- All content goes here -->
+    <div>
+        <div id="all-contents">
+            ...
+    </div>
+ </body>
+      <nav>
+        <h1>Hallebot's Glorious Website</h1>
+        <ul>
+            <li>
+              <a href="index.html"> Home </a>
+            </li>
+            <li>
+              <a href="portfolio.html"> Portfolio </a>
+            </li>
+        </ul>
+     </nav>
 
-    <body>
-        <!-- Visible HTML elements GO HERE  -->
-        <nav>
+      <main>
+        <!-- Sidebar section -->
+        <div> 
+            <img src="/img/Benefits_of_Lotus_Flower.webp"></div>
+        <!-- Content section -->
+        <div> 
+          <h2>Farah</h2>
+          <p>Student at Bonnabel High</p>
+          <!-- Interests section -->
+          <div>
+            <h3>Interests</h3>
+            <ul>
+              <li> 1</li>
+              <li> 2</li>
+              <li> 3</li>
+            </ul>
+          </div>
 
-        </nav>
-
-    </body>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
