--- a/index.html
+++ b/index.html
@@ -1,50 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>farah</title>
+    <title>Farah</title>
   </head>
   <title>Witty title you added in step 2</title>
   <link rel="stylesheet" href="style.css">
 </head>
   <body>
     <!-- All content goes here -->
-    <div>
-        <div id="all-contents">
-            ...
-    </div>
- </body>
+    <div id="all-contents">
       <nav>
         <h1>Hallebot's Glorious Website</h1>
-        <ul>
-            <li>
+        <ul id="nav-ul ">
+            <li class="nav-li">
               <a href="index.html"> Home </a>
             </li>
-            <li>
+            <li class="nav-li">
               <a href="portfolio.html"> Portfolio </a>
             </li>
         </ul>
      </nav>
-
       <main>
         <!-- Sidebar section -->
-        <div> 
-            <img src="/img/Benefits_of_Lotus_Flower.webp"></div>
+        <div class="sidebar"> 
+            <img class="sidebar-img" src="/img/Benefits_of_Lotus_Flower.webp"></div>
         <!-- Content section -->
-        <div> 
+        <div class="content"> 
           <h2>Farah</h2>
           <p>Student at Bonnabel High</p>
-          <!-- Interests section -->
-          <div>
+           <!-- Interests section -->
+          <div id="interests">
             <h3>Interests</h3>
             <ul>
-              <li> 1</li>
-              <li> 2</li>
-              <li> 3</li>
+              <li> Cars</li>
+              <li> Fashion</li>
+              <li> Decorating/styling</li>
             </ul>
           </div>
-
         </div>
-      </main>
+      </main> 
     </div>
   </body>
 </html>
