--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -7,17 +7,17 @@
 	<script src="jquery.min.js"></script>
 	<style>
 		.box {
-			width: 70px;
-			height: 70px;
-			background-color: teal;
+			width: 300px;
+			height: 200px;
+			background-color: rgb(245, 198, 234);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
 			display: block;
 			position: absolute;
-			top: 100px;
+			top: 400px;
 			/* Change me! */
-			left: 0px;
+			left: 400px;
 		}
 
 		.board {
@@ -33,7 +33,10 @@
 	<div class="box">?</div>
 
 	<script>
-		(function () {
+		(function moveBoxTo (newPositionX) {
+			box.css("left", newPositionX); 
+		
+		
 			'use strict'
 			/* global jQuery */
 
@@ -67,17 +70,22 @@
 
 			// TODO 2 - Variable declarations 
 
-
+/* Your Variable Declaration HERE */
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {
+			function update() { 
+				moveBoxTo(100);
+				positionX = positionX + 10;
+				moveBoxTo(positionX);
+				var points = 0
+				var speed = 10
+			}
 
-
-			};
+		
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -85,9 +93,12 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0;
 
+				// your code to increase the points variable by 1
 
-			};
+				changeBoxText(1);
+			}
 
 
 
